# Greedy-Algorithm-Project

./: GreedyAlgorithm.sln  HeuristicAlgorithm.sln  README.md
CmakeGreedy/: CMakeLists.txt
GreedyAlgorithm/: CHECK_CONS.cpp  CHECK_CONS.h  GREEDY.cpp  GREEDY.h  GreedyAlgorithm.cpp  GreedyAlgorithm.vcxproj  GreedyAlgorithm.vcxproj.filters  INSTANCE.cpp  INSTANCE.h  POST_PROC.cpp  POST_PROC.h  RD_INSTANCE.cpp  RD_INSTANCE.h  SORT.cpp  SORT.h  UTILITY.cpp  UTILITY.h
GreedyAlgorithm/instances/: randomGMKP_1.inc
HeuristicAlgorithm/: GREEDY.cpp  GREEDY.h  HeuristicAlgorithm.cpp  HeuristicAlgorithm.vcxproj  HeuristicAlgorithm.vcxproj.filters  RD_INSTANCE.cpp  RD_INSTANCE.h  SORT.cpp  SORT.h  UTILITY.cpp  UTILITY.h
HeuristicAlgorithm/Debug/: rd_instance.obj.enc  vc141.idb
HeuristicAlgorithm/Debug/Heuristi.AAEC1664.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HeuristicAlgorithm.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
